--- a/info.yml
+++ b/info.yml
@@ -1,6 +1,6 @@
-name : Your Name Here
-keywords : "some | adjectives | about you"
-major: Your Major
-gradyear: 2026
-tagline : a short phrase you want people to see on every page
+name : Cesar Sicaju
+keywords : outgoing, friendly, amicable
+major: Computer Engineering
+gradyear: 2027
+tagline : I slay everyday
 default_mode: dark
